fixed flickering with 1 line

--- a/base.css
+++ b/base.css
@@ -18,6 +18,7 @@
 }
 
 #gallery p {
+	pointer-events: none;
 	vertical-align:bottom;
 	text-align:right;
 	position: absolute;
